--- a/employee-directory/package.json
+++ b/employee-directory/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://tonipow3ll.github.io/employee-directory",
+  "homepage": "http://www.tonipow3ll.com/Employee-Directory/",
   "name": "employee-directory",
   "version": "0.1.0",
   "private": true,
